--- a/packer.ipynb
+++ b/packer.ipynb
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2361/2361 [00:22<00:00, 103.71it/s]"
+      "100%|██████████| 2361/2361 [00:21<00:00, 110.81it/s]\n"
      ]
     },
     {
@@ -82,13 +82,6 @@
      "output_type": "stream",
      "text": [
       "10420\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -106,12 +99,13 @@
     "\n",
     "    for layer_index, layer in packer.packed_items.layers.items():\n",
     "        for x,y,shape in layer:\n",
-    "            item_results.append([\"Order_ID\",layer_index,shape.id,x,y,shape.w,shape.h,shape.q])\n",
+    "            item_results.append([order_id,layer_index,shape.item_id,x,y,shape.w,shape.h,shape.q])\n",
     "\n",
     "\n",
     "results_df = pd.DataFrame(results, columns=[\"Order_ID\", \"Liquid_Filling\", \"Amount_of_Layers\"])\n",
-    "item_results = pd.DataFrame(item_results, columns=[\"Order_ID\", \"Product\"])\n",
+    "item_results = pd.DataFrame(item_results, columns=[\"Order_ID\", \"Layer_Index\",\"Product_ID\",\"x\",\"y\",\"w\",\"h\",\"Quantity\"])\n",
     "print(results_df[\"Amount_of_Layers\"].sum())\n",
+    "item_results.to_csv(\"Packed_items.csv\",index=None)\n",
     "\n"
    ]
   },
